# chatbot

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
app/: ai_message.py  chainlit_app.py  config.py  main.py  pukiwiki_loader.py  rag_service.py  vector_store.py
docker/chainlit/: Dockerfile
docker/fastapi/: Dockerfile
