[project]
name = "test-c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.400",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ollama>=0.4.7",
    "qdrant-client>=1.13.3",
    "uvicorn>=0.34.0",
]
